# bunyan

./: Cargo.toml  README.md  index.html  install.sh  package-lock.json  package.json  vite.config.ts
.claude/skills/release/: SKILL.md
.claude/skills/release/references/: versioning.md
.claude/skills/release/scripts/: build.sh  bump-version.sh  generate-update-manifest.sh  get-release-context.sh
bunyan-cli/: Cargo.toml
bunyan-cli/src/: client.rs  config.rs  main.rs  output.rs
bunyan-cli/src/commands/: docker.rs  mod.rs  pane.rs  repo.rs  session.rs  settings.rs  workspace.rs
bunyan-core/: Cargo.toml
bunyan-core/src/: docker.rs  editor.rs  git.rs  lib.rs  models.rs  sessions.rs  terminal.rs  tmux.rs  workspace.rs
bunyan-core/src/db/: repos.rs  schema.rs  settings.rs
bunyan-core/src/server/: error.rs  mod.rs
bunyan-core/src/server/routes/: docker.rs  editors.rs  health.rs  mod.rs  repos.rs  sessions.rs  settings.rs  system.rs  workspaces.rs
docs/: ACTIVE_CLAUDE_CODE_SESSIONS.md  ADDITIONAL_BINARIES.md  CONDUCTOR_DATA_MODEL.md  FRONTEND.md  HIGH_LEVEL_TAURI.md  SETUP.md  TMUX_SESSION_MANAGEMENT.md
notes/: TODO.md  full-editor-integration.md
skills/bunyan/: SKILL.md
skills/bunyan/reference/: api-reference.md  container-workflows.md  project-workflows.md  session-workflows.md  worktree-workflows.md
skills/bunyan/scripts/: check-server.sh
src/: App.css  App.tsx  bindings.ts  index.css  updater.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: docker.rs  error.rs  lib.rs  main.rs  models.rs  process.rs  state.rs  terminal.rs  tmux.rs
src-tauri/src/commands/: claude.rs  docker.rs  mod.rs  repos.rs  settings.rs  workspaces.rs
src-tauri/src/db/: mod.rs  repos.rs  schema.rs  workspaces.rs
src/api/: client.ts  index.ts  schema.d.ts
src/components/: detail-panel.tsx  editor-split-button.tsx  status-dot.tsx  tree-panel.tsx
src/components/modals/: add-repo.tsx  confirm-archive.tsx  create-worktree.tsx  settings.tsx
src/lib/: context.ts  helpers.ts  types.ts
