[package]
name = "bunyan-cli"
version = "0.1.2"
edition = "2021"

[[bin]]
name = "bunyan"
path = "src/main.rs"

[dependencies]
bunyan-core = { path = "../bunyan-core", features = ["server"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
dirs = "5"
