[package]
name = "bunyan-core"
version = "0.1.0"
edition = "2021"

[features]
default = []
specta = ["dep:specta"]
server = ["dep:axum", "dep:tower-http", "dep:tokio"]

[[bin]]
name = "bunyan-server"
path = "src/bin/serve.rs"
required-features = ["server"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
bollard = "0.18"
futures-util = "0.3"

# Optional: specta for Tauri type generation
specta = { version = "=2.0.0-rc.22", features = ["serde_json"], optional = true }

# Optional: server dependencies
axum = { version = "0.8", optional = true }
tower-http = { version = "0.6", features = ["cors"], optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"], optional = true }
