[package]
name = "bunyan-core"
version = "0.2.0"
edition = "2021"

[features]
default = []
server = ["dep:axum", "dep:tower-http", "dep:tokio", "dep:utoipa", "dep:utoipa-axum"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
bollard = "0.18"
futures-util = "0.3"

# Optional: server dependencies
axum = { version = "0.8", optional = true }
tower-http = { version = "0.6", features = ["cors"], optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"], optional = true }
utoipa = { version = "5", features = ["axum_extras"], optional = true }
utoipa-axum = { version = "0.2", optional = true }
